--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,12 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: memph_production
   pool: 5
+  username: kiennt
+  password: k
+  host: 192.22.88.100
+  port: 5678
   timeout: 5000
